Fixed color for scrollbar

--- a/src/scss/_extends.scss
+++ b/src/scss/_extends.scss
@@ -6,11 +6,11 @@
     border-radius: 10px;
 }
 .news-container::-webkit-scrollbar-thumb {
-    background: rgb($color: #038537, $alpha: 1);
+    background: rgb($color: #034f85, $alpha: 1);
     border-radius: 10px;
 }
 .news-container::-webkit-scrollbar-thumb:hover {
-    background: rgb($color: #035e27, $alpha: 1);
+    background: rgb($color: #01355a, $alpha: 1);
 }
 
 .campaigns-container::-webkit-scrollbar {
@@ -21,9 +21,9 @@
     border-radius: 10px;
 }
 .campaigns-container::-webkit-scrollbar-thumb {
-    background: rgb($color: #038537, $alpha: 1);
+    background: rgb($color: #034f85, $alpha: 1);
     border-radius: 10px;
 }
 .campaigns-container::-webkit-scrollbar-thumb:hover {
-    background: rgb($color: #035e27, $alpha: 1);
+    background: rgb($color: #01355a, $alpha: 1);
 }
