--- a/src/scss/_products.scss
+++ b/src/scss/_products.scss
@@ -84,6 +84,11 @@
             h2 {
                 font-size: 1.5rem;
             }
+            button {
+                @include mixins.tablet {
+                    display: none;
+                }
+            }
         }
         .news-container,
         .campaigns-container {
